--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "node server.js",
     "build": "npm install && prisma generate",
     "test:auth": "jest tests/unit/controllers/auth.controller.test.js",
-    "test:communities": "jest tests/unit/controllers/communities.controller.test.js"
+    "test:communities": "jest tests/unit/controllers/communities.controller.test.js",
+    "test:discussion": "jest tests/unit/controllers/discussion.controller.test.js",
+     "test:news": "jest tests/unit/controllers/news.controller.test.js",
+      "testInt:auth": "jest tests/integration/auth.routes.test.js",
+      "testInt:community": "jest tests/integration/commuity.route.test.js",
+      "testInt:news": "jest tests/integration/news.route.test.js"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
